@@ -7,6 +7,7 @@
 * Enhanced min/max/rangeWords (in additional-methods.js) to strip html before counting; good when counting words in a richtext editor
 * Added localized methods for DE, NL and PT_BR, removing the dateDE and numberDE methods (use messages_de.js and methods_de.js with date and number methods instead)
 * Fixed remote form submit synchronization, kudos to Matas Petrikas
+* Improved interactive select validation, now validating also on click (via option or select, inconsistent across browsers); doesn't work in Safari, which doesn't trigger a click event at all on select elements; fixes http://plugins.jquery.com/node/11520
 
 1.5.5
 ---
